# doc-extraction

./: .gitignore  README.md  pyproject.toml
.pi/: settings.json
.pi/prompts/: extract-deal.md  extract-facility.md
data/: 04_facility_uk_gov_dft_facility_agreement.json  04_facility_uk_gov_dft_facility_agreement.json.source.txt  06_facility_dignity_phoenix_facility_agreement.json  06_facility_dignity_phoenix_facility_agreement.json.source.txt  07_deal_ultra_group_senior_facilities.json  07_deal_ultra_group_senior_facilities.json.source.txt  09_facility_term_sheet_loan_facility_sec.json  09_facility_term_sheet_loan_facility_sec.json.source.txt
docs/: index.md
extensions/pdf/: index.ts
extensions/validation/: index.ts
skills/deal-json-extraction/: SKILL.md
skills/facility-json-extraction/: SKILL.md
tools/: extract_pdf_text.py  validate_extraction.py
validation/: business-config.yaml
validation/entity_helpers/: deal_v1.json  facility_v1.json  version_registry.py
validation/models/: deal.schema.v1.0.0.json  facility.schema.v1.0.0.json
validation/rules/deal/: rule_deal_001_v1.py  rule_deal_002_v1.py  rule_deal_003_v1.py  rule_deal_004_v1.py  rule_deal_005_v1.py  rule_deal_006_v1.py  rule_deal_007_v1.py  rule_deal_008_v1.py  rule_deal_009_v1.py  rule_deal_010_v1.py
validation/rules/facility/: rule_facility_001_v1.py  rule_facility_002_v1.py  rule_facility_003_v1.py  rule_facility_004_v1.py  rule_facility_005_v1.py  rule_facility_006_v1.py  rule_facility_007_v1.py  rule_facility_008_v1.py  rule_facility_009_v1.py  rule_facility_010_v1.py
